<resources>

    <string name="app_name">Dave\'s Universal Remote</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Dave\'s Universal Remote</string>
    <string name="main_page_title">Select Device…</string>
    <string name="device_tv">TV</string>
    <string name="device_receiver">Receiver</string>
    <string name="device_cable">Cable</string>
    <string name="device_ps3">PS3</string>
    <string name="arduino_address">Arduino IP Address</string>
    <string name="ps3_bluetooth">PS3 Bluetooth control?</string>
    <string name="help">Help</string>
    <string name="title_preferences">Preferences Activity</string>
    <string name="arduino_port">56000</string>
    <string name="power">Power</string>
    <string name="vol_up">Volume Up</string>
    <string name="vol_down">Volume Down</string>
    <string name="title_receiver">Receiver Activity</string>

</resources>