<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="Aircraft Settings" >
        <EditTextPreference
            android:defaultValue="192.168.1.10"
            android:key="pref_arduinoIP"
            android:summary="192.168.1.10"
            android:title="@string/arduino_address" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_bluetooth"
            android:title="@string/ps3_bluetooth" />
        
        <EditTextPreference
            android:defaultValue="56000"
            android:key="pref_port"
            android:summary="56000"
            android:title="@string/arduino_port"/>
    </PreferenceCategory>

</PreferenceScreen>